printing: fix bg color wghen using legend + box

Please test (http://kate-editor.org/get-it/), then we can backport to KDE SC 4.6.
BUG: 200248